# ai-coding-agent

./: .gitignore  README.md  ROADMAP.md  fibonacci_function.py  math_lib.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
agent/: main.py  tools.py
sandbox/: bank.py  fibonacci.py  login_system.py  math_lib.py  test_bank.py  test_temp.py  text_lib.py
tests/: test_e2e.py
