[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "certifi>=2026.1.4",
    "distro>=1.9.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jiter>=0.13.0",
    "openai>=2.20.0",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sniffio>=1.3.1",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
strict = true
